--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 build:
-  image: sigma-ci-fedora:latest
+  image: docker/sigma-ci-fedora:latest
   script:
   - make
   - make -C testsuite SKIP_MD5=true DIGEST_PROVIDERS=gnutls
