CI: simplified build
Signed-off-by: Enrico Scholz <enrico.scholz@sigma-chemnitz.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 build:
   image: docker/sigma-ci-fedora:latest
   script:
-  - make
-  - make -C testsuite SKIP_MD5=true DIGEST_PROVIDERS=gnutls
+  - make ci-build SKIP_MD5=true DIGEST_PROVIDERS=gnutls
